Fix category card title alignment.

--- a/src/app/home/components/category-card/category-card.component.scss
+++ b/src/app/home/components/category-card/category-card.component.scss
@@ -8,6 +8,7 @@
 
 .product-title {
   color: $primary;
+  min-height: 60px;
 }
 
 .product-link {
